// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TechList> should render component 1`] = `
<RCTScrollView
  data={
    [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "1",
        "props": {
          "children": "Test 1",
        },
        "type": "div",
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "2",
        "props": {
          "children": "Test 2",
        },
        "type": "div",
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "3",
        "props": {
          "children": "Test 3",
        },
        "type": "div",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  style={
    {
      "margin": 10,
    }
  }
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text>
        <div>
          Test 1
        </div>
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text>
        <div>
          Test 2
        </div>
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text>
        <div>
          Test 3
        </div>
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<TechList> should render component with props 1`] = `
<RCTScrollView
  data={
    [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "1",
        "props": {
          "children": "Test 1",
        },
        "type": "div",
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "2",
        "props": {
          "children": "Test 2",
        },
        "type": "div",
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": "3",
        "props": {
          "children": "Test 3",
        },
        "type": "div",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  style={
    {
      "margin": 10,
    }
  }
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          {
            "fontSize": 20,
          }
        }
      >
        <div>
          Test 1
        </div>
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          {
            "fontSize": 20,
          }
        }
      >
        <div>
          Test 2
        </div>
      </Text>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <Text
        style={
          {
            "fontSize": 20,
          }
        }
      >
        <div>
          Test 3
        </div>
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
